feat(blog): add design doc post and templates

--- a/blog/1-primeiro-post.mdx
+++ b/blog/1-primeiro-post.mdx
@@ -248,6 +248,8 @@ Espero que tenham gostado e aprendido algo novo. Até a próxima! 🚀
 
 Links:
 
-- [Product VIsion](https://thabyte.com.br/product-vision-o-que-e-como-criar-e-por-que-e-essencial-para-o-sucesso-do-seu-produto/)
+- [Product Vision Template](../templates/product-vision.mdx)
+- [Product Backlog Inicial Template](../templates/product-backlog.mdx)
+- [Product Vision](https://thabyte.com.br/product-vision-o-que-e-como-criar-e-por-que-e-essencial-para-o-sucesso-do-seu-produto/)
 - [Product Backlog Inicial](https://gaea.com.br/product-backlog/)
 - [MoSCoW](https://www.flowup.me/blog/tecnica-moscow/)
